Practica12/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'

   2  lista_definiciones : lista_definiciones definicion_variable
   3                     | lista_definiciones definicion_funcion
   4                     |

   5  lista_definicion_variables : lista_definicion_variables definicion_variable
   6                             |

   7  definicion_variable : VAR variable ';'

   8  variable : identificadores tipo_ampliado

   9  tipo_ampliado : tipo
  10                | tipo_vector
  11                | tipo_struct

  12  tipo : INT
  13       | FLOAT32
  14       | CHAR

  15  tipo_vector : '[' CTE_ENTERA ']' tipo_ampliado

  16  tipo_struct : STRUCT '{' registros_struct '}'

  17  registros_struct : registros_struct identificadores tipo_ampliado ';'
  18                   |

  19  identificadores : IDENT
  20                  | identificadores ',' IDENT

  21  definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'

  22  tipo_retorno : tipo
  23               |

  24  lista_parametros_opt : lista_parametros
  25                       |

  26  lista_parametros : lista_parametros ',' parametro
  27                   | parametro

  28  parametro : IDENT tipo

  29  lista_sentencias : lista_sentencias sentencia
  30                   |

  31  sentencia : expresion '=' expresion ';'
  32            | IF expresion '{' lista_sentencias '}'
  33            | IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  34            | WHILE expresion '{' lista_sentencias '}'
  35            | IDENT '(' lista_expresiones_opt ')' ';'
  36            | WRITE '(' lista_expresiones ')' ';'
  37            | READ '(' lista_expresiones ')' ';'
  38            | RETURN expresion ';'

  39  cast : tipo '(' expresion ')'

  40  lista_expresiones_opt : lista_expresiones
  41                        |

  42  lista_expresiones : lista_expresiones ',' expresion
  43                    | expresion

  44  expresion : expresion '+' expresion
  45            | expresion '*' expresion
  46            | expresion '/' expresion
  47            | IDENT '(' lista_expresiones_opt ')'
  48            | expresion '%' expresion
  49            | expresion '-' expresion
  50            | cast
  51            | '-' expresion
  52            | '(' expresion ')'
  53            | expresion '[' expresion ']'
  54            | expresion AND expresion
  55            | expresion OR expresion
  56            | expresion IGUAL_IGUAL expresion
  57            | expresion MAYOR_IGUAL expresion
  58            | expresion MENOR_IGUAL expresion
  59            | expresion DISTINTO expresion
  60            | expresion '>' expresion
  61            | expresion '<' expresion
  62            | '!' expresion
  63            | expresion '.' IDENT
  64            | CTE_ENTERA
  65            | CTE_REAL
  66            | CTE_CARACTER
  67            | IDENT

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (4)

	.  reduce 4

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)
	lista_definiciones : lista_definiciones . definicion_variable  (2)
	lista_definiciones : lista_definiciones . definicion_funcion  (3)

	VAR  shift 3
	FUNC  shift 4
	.  error

	definicion_variable  goto 5
	definicion_funcion  goto 6


state 3
	definicion_variable : VAR . variable ';'  (7)

	IDENT  shift 7
	.  error

	variable  goto 8
	identificadores  goto 9


state 4
	programa : lista_definiciones FUNC . MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)
	definicion_funcion : FUNC . IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (21)

	MAIN  shift 10
	IDENT  shift 11
	.  error


state 5
	lista_definiciones : lista_definiciones definicion_variable .  (2)

	.  reduce 2


state 6
	lista_definiciones : lista_definiciones definicion_funcion .  (3)

	.  reduce 3


state 7
	identificadores : IDENT .  (19)

	.  reduce 19


state 8
	definicion_variable : VAR variable . ';'  (7)

	';'  shift 12
	.  error


state 9
	variable : identificadores . tipo_ampliado  (8)
	identificadores : identificadores . ',' IDENT  (20)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	STRUCT  shift 16
	'['  shift 17
	','  shift 18
	.  error

	tipo_ampliado  goto 19
	tipo  goto 20
	tipo_vector  goto 21
	tipo_struct  goto 22


state 10
	programa : lista_definiciones FUNC MAIN . '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)

	'('  shift 23
	.  error


state 11
	definicion_funcion : FUNC IDENT . '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (21)

	'('  shift 24
	.  error


state 12
	definicion_variable : VAR variable ';' .  (7)

	.  reduce 7


state 13
	tipo : INT .  (12)

	.  reduce 12


state 14
	tipo : FLOAT32 .  (13)

	.  reduce 13


state 15
	tipo : CHAR .  (14)

	.  reduce 14


state 16
	tipo_struct : STRUCT . '{' registros_struct '}'  (16)

	'{'  shift 25
	.  error


state 17
	tipo_vector : '[' . CTE_ENTERA ']' tipo_ampliado  (15)

	CTE_ENTERA  shift 26
	.  error


state 18
	identificadores : identificadores ',' . IDENT  (20)

	IDENT  shift 27
	.  error


state 19
	variable : identificadores tipo_ampliado .  (8)

	.  reduce 8


state 20
	tipo_ampliado : tipo .  (9)

	.  reduce 9


state 21
	tipo_ampliado : tipo_vector .  (10)

	.  reduce 10


state 22
	tipo_ampliado : tipo_struct .  (11)

	.  reduce 11


state 23
	programa : lista_definiciones FUNC MAIN '(' . ')' '{' lista_definicion_variables lista_sentencias '}'  (1)

	')'  shift 28
	.  error


state 24
	definicion_funcion : FUNC IDENT '(' . lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (21)
	lista_parametros_opt : .  (25)

	IDENT  shift 29
	')'  reduce 25

	lista_parametros_opt  goto 30
	lista_parametros  goto 31
	parametro  goto 32


state 25
	tipo_struct : STRUCT '{' . registros_struct '}'  (16)
	registros_struct : .  (18)

	.  reduce 18

	registros_struct  goto 33


state 26
	tipo_vector : '[' CTE_ENTERA . ']' tipo_ampliado  (15)

	']'  shift 34
	.  error


state 27
	identificadores : identificadores ',' IDENT .  (20)

	.  reduce 20


state 28
	programa : lista_definiciones FUNC MAIN '(' ')' . '{' lista_definicion_variables lista_sentencias '}'  (1)

	'{'  shift 35
	.  error


state 29
	parametro : IDENT . tipo  (28)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	.  error

	tipo  goto 36


state 30
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt . ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (21)

	')'  shift 37
	.  error


state 31
	lista_parametros_opt : lista_parametros .  (24)
	lista_parametros : lista_parametros . ',' parametro  (26)

	','  shift 38
	')'  reduce 24


state 32
	lista_parametros : parametro .  (27)

	.  reduce 27


state 33
	tipo_struct : STRUCT '{' registros_struct . '}'  (16)
	registros_struct : registros_struct . identificadores tipo_ampliado ';'  (17)

	IDENT  shift 7
	'}'  shift 39
	.  error

	identificadores  goto 40


state 34
	tipo_vector : '[' CTE_ENTERA ']' . tipo_ampliado  (15)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	STRUCT  shift 16
	'['  shift 17
	.  error

	tipo_ampliado  goto 41
	tipo  goto 20
	tipo_vector  goto 21
	tipo_struct  goto 22


state 35
	programa : lista_definiciones FUNC MAIN '(' ')' '{' . lista_definicion_variables lista_sentencias '}'  (1)
	lista_definicion_variables : .  (6)

	.  reduce 6

	lista_definicion_variables  goto 42


state 36
	parametro : IDENT tipo .  (28)

	.  reduce 28


state 37
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' . tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (21)
	tipo_retorno : .  (23)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	'{'  reduce 23

	tipo  goto 43
	tipo_retorno  goto 44


state 38
	lista_parametros : lista_parametros ',' . parametro  (26)

	IDENT  shift 29
	.  error

	parametro  goto 45


state 39
	tipo_struct : STRUCT '{' registros_struct '}' .  (16)

	.  reduce 16


state 40
	registros_struct : registros_struct identificadores . tipo_ampliado ';'  (17)
	identificadores : identificadores . ',' IDENT  (20)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	STRUCT  shift 16
	'['  shift 17
	','  shift 18
	.  error

	tipo_ampliado  goto 46
	tipo  goto 20
	tipo_vector  goto 21
	tipo_struct  goto 22


state 41
	tipo_vector : '[' CTE_ENTERA ']' tipo_ampliado .  (15)

	.  reduce 15


state 42
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables . lista_sentencias '}'  (1)
	lista_definicion_variables : lista_definicion_variables . definicion_variable  (5)
	lista_sentencias : .  (30)

	VAR  shift 3
	READ  reduce 30
	WRITE  reduce 30
	WHILE  reduce 30
	IF  reduce 30
	INT  reduce 30
	FLOAT32  reduce 30
	CHAR  reduce 30
	RETURN  reduce 30
	IDENT  reduce 30
	CTE_ENTERA  reduce 30
	CTE_REAL  reduce 30
	CTE_CARACTER  reduce 30
	'-'  reduce 30
	'!'  reduce 30
	'('  reduce 30
	'}'  reduce 30

	lista_sentencias  goto 47
	definicion_variable  goto 48


state 43
	tipo_retorno : tipo .  (22)

	.  reduce 22


state 44
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno . '{' lista_definicion_variables lista_sentencias '}'  (21)

	'{'  shift 49
	.  error


state 45
	lista_parametros : lista_parametros ',' parametro .  (26)

	.  reduce 26


state 46
	registros_struct : registros_struct identificadores tipo_ampliado . ';'  (17)

	';'  shift 50
	.  error


state 47
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias . '}'  (1)
	lista_sentencias : lista_sentencias . sentencia  (29)

	READ  shift 51
	WRITE  shift 52
	WHILE  shift 53
	IF  shift 54
	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	RETURN  shift 55
	IDENT  shift 56
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'}'  shift 63
	.  error

	tipo  goto 64
	sentencia  goto 65
	expresion  goto 66
	cast  goto 67


state 48
	lista_definicion_variables : lista_definicion_variables definicion_variable .  (5)

	.  reduce 5


state 49
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno '{' . lista_definicion_variables lista_sentencias '}'  (21)
	lista_definicion_variables : .  (6)

	.  reduce 6

	lista_definicion_variables  goto 68


state 50
	registros_struct : registros_struct identificadores tipo_ampliado ';' .  (17)

	.  reduce 17


state 51
	sentencia : READ . '(' lista_expresiones ')' ';'  (37)

	'('  shift 69
	.  error


state 52
	sentencia : WRITE . '(' lista_expresiones ')' ';'  (36)

	'('  shift 70
	.  error


state 53
	sentencia : WHILE . expresion '{' lista_sentencias '}'  (34)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 72
	cast  goto 67


state 54
	sentencia : IF . expresion '{' lista_sentencias '}'  (32)
	sentencia : IF . expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (33)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 73
	cast  goto 67


state 55
	sentencia : RETURN . expresion ';'  (38)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 74
	cast  goto 67


state 56
	sentencia : IDENT . '(' lista_expresiones_opt ')' ';'  (35)
	expresion : IDENT . '(' lista_expresiones_opt ')'  (47)
	expresion : IDENT .  (67)

	'('  shift 75
	IGUAL_IGUAL  reduce 67
	MAYOR_IGUAL  reduce 67
	MENOR_IGUAL  reduce 67
	DISTINTO  reduce 67
	'='  reduce 67
	AND  reduce 67
	OR  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'['  reduce 67
	'.'  reduce 67


state 57
	expresion : CTE_ENTERA .  (64)

	.  reduce 64


state 58
	expresion : CTE_REAL .  (65)

	.  reduce 65


state 59
	expresion : CTE_CARACTER .  (66)

	.  reduce 66


state 60
	expresion : '-' . expresion  (51)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 76
	cast  goto 67


state 61
	expresion : '!' . expresion  (62)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 77
	cast  goto 67


state 62
	expresion : '(' . expresion ')'  (52)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 78
	cast  goto 67


state 63
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}' .  (1)

	.  reduce 1


state 64
	cast : tipo . '(' expresion ')'  (39)

	'('  shift 79
	.  error


state 65
	lista_sentencias : lista_sentencias sentencia .  (29)

	.  reduce 29


state 66
	sentencia : expresion . '=' expresion ';'  (31)
	expresion : expresion . '+' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '%' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . AND expresion  (54)
	expresion : expresion . OR expresion  (55)
	expresion : expresion . IGUAL_IGUAL expresion  (56)
	expresion : expresion . MAYOR_IGUAL expresion  (57)
	expresion : expresion . MENOR_IGUAL expresion  (58)
	expresion : expresion . DISTINTO expresion  (59)
	expresion : expresion . '>' expresion  (60)
	expresion : expresion . '<' expresion  (61)
	expresion : expresion . '.' IDENT  (63)

	IGUAL_IGUAL  shift 80
	MAYOR_IGUAL  shift 81
	MENOR_IGUAL  shift 82
	DISTINTO  shift 83
	'='  shift 84
	AND  shift 85
	OR  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	'['  shift 94
	'.'  shift 95
	.  error


state 67
	expresion : cast .  (50)

	.  reduce 50


state 68
	lista_definicion_variables : lista_definicion_variables . definicion_variable  (5)
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables . lista_sentencias '}'  (21)
	lista_sentencias : .  (30)

	VAR  shift 3
	READ  reduce 30
	WRITE  reduce 30
	WHILE  reduce 30
	IF  reduce 30
	INT  reduce 30
	FLOAT32  reduce 30
	CHAR  reduce 30
	RETURN  reduce 30
	IDENT  reduce 30
	CTE_ENTERA  reduce 30
	CTE_REAL  reduce 30
	CTE_CARACTER  reduce 30
	'-'  reduce 30
	'!'  reduce 30
	'('  reduce 30
	'}'  reduce 30

	lista_sentencias  goto 96
	definicion_variable  goto 48


state 69
	sentencia : READ '(' . lista_expresiones ')' ';'  (37)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 97
	lista_expresiones  goto 98
	cast  goto 67


state 70
	sentencia : WRITE '(' . lista_expresiones ')' ';'  (36)

	INT  shift 13
	FLOAT32  shift 14
	CHAR  shift 15
	IDENT  shift 71
	CTE_ENTERA  shift 57
	CTE_REAL  shift 58
	CTE_CARACTER  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	tipo  goto 64
	expresion  goto 97
	lista_expresiones  goto 99
	cast  goto 67


state 71
	expresion : IDENT . '(' lista_expresiones_opt ')'  (47)
	expresion : IDENT .  (67)

	'('  shift 100
	IGUAL_IGUAL  reduce 67
	MAYOR_IGUAL  reduce 67
	MENOR_IGUAL  reduce 67
	DISTINTO  reduce 67
	'='  reduce 67
	AND  reduce 67
	OR  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'['  reduce 67
	']'  reduce 67
	'.'  reduce 67
	')'  reduce 67
	'{'  reduce 67
	';'  reduce 67
	','  reduce 67


state 72
	sentencia : WHILE expresion . '{' lista_sentencias '}'  (34)
	expresion : expresion . '+' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '%' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . AND expresion  (54)
	expresion : expresion . OR expresion  (55)
	expresion : expresion . IGUAL_IGUAL expresion  (56)
	expresion : expresion . MAYOR_IGUAL expresion  (57)
	expresion : expresion . MENOR_IGUAL expresion  (58)
	expresion : expresion . DISTINTO expresion  (59)
	expresion : expresion . '>' expresion  (60)
	expresion : expresion . '<' expresion  (61)
	expresion : expresion . '.' IDENT  (63)

	IGUAL_IGUAL  shift 80
	MAYOR_IGUAL  shift 81
	MENOR_IGUAL  shift 82
	DISTINTO  shift 83
	AND  shift 85
	OR  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	'['  shift 94
	'.'  shift 95
	'{'  shift 101
	.  error


state 73
	sentencia : IF expresion . '{' lista_sentencias '}'  (32)
	sentencia : IF expresion . '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (33)
	expresion : expresion . '+' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '%' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . AND expresion  (54)
	expresion : expresion . OR expresion  (55)
	expresion : expresion . IGUAL_IGUAL expresion  (56)
	expresion : expresion . MAYOR_IGUAL expresion  (57)
	expresion : expresion . MENOR_IGUAL expresion  (58)
	expresion : expresion . DISTINTO expresion  (59)
	expresion : expresion . '>' expresion  (60)
	expresion : expresion . '<' expresion  (61)
	expresion : expresion . '.' IDENT  (63)

	IGUAL_IGUAL  shift 80
	MAYOR_IGUAL  shift 81
	MENOR_IGUAL  shift 82
	DISTINTO  shift 83
	AND  shift 85
	OR  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	'['  shift 94
	'.'  shift 95
	'{'  shift 102
	.  error

